--- a/Employmanagement/src/components/layout/Header.css
+++ b/Employmanagement/src/components/layout/Header.css
@@ -21,8 +21,8 @@
 }
 
 .menu-btn {
-  display: none;
-  background: none;
+  display: flex;
+  background:none;
   border: none;
   padding: 0.5rem;
   border-radius: 0.5rem;
