--- a/Employmanagement/src/index.css
+++ b/Employmanagement/src/index.css
@@ -35,11 +35,14 @@ body {
   min-width: 320px;
   min-height: 100vh;
   background-color: #f9fafb;
+  overflow: hidden;
 }
 
 #root {
   width: 100%;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 button {
